# pokemon-tcg-deck-list-generator

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: 2026-champions-league-osaka-1st-alakazam.txt
src/pokemon_tcg_deck_list_generator/: cli.py  main.py
